option java_package = "snake.network";

message Position {
	required int32 row = 1;
	required int32 col = 2;
}

message SnakeMsg {
	required int32 frameCount = 1;
	required string UUID = 2;
	
	repeated Position snakePartList = 3;
	
	required int32 avgDelay = 4;
	
	optional Position applePosition = 5;
}